--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -134,6 +134,26 @@ body {
   }
   } 
 
+.loader:before,
+.loader:after {
+  content: '';
+  border-radius: 50%;
+  position: absolute;
+  inset: 0;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3) inset;
+}
+.loader:after {
+  box-shadow: 0 2px 0 #ff3d00 inset;
+  animation: rotate 2s linear infinite;
+}
+
+.load-more-btn {
+  display: block;
+  width: 125px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .hide {
   display: none;
 }
